[gd_scene load_steps=37 format=3 uid="uid://bcwi26wn42ami"]

[ext_resource type="PackedScene" uid="uid://cga5yjoodl3og" path="res://assets/characters/Knight.glb" id="1_u1bpg"]
[ext_resource type="Script" path="res://Scenes/Characters/enemy_knight.gd" id="2_quhgy"]
[ext_resource type="PackedScene" uid="uid://ccbfqnb320h00" path="res://Scenes/Utils/health.tscn" id="3_gvfh5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pav6j"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q1j3l"]
animation = &"1H_Melee_Attack_Slice_Diagonal"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wjsjs"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1funj"]
animation = &"Block"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xny4h"]
animation = &"Block"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k5g38"]
animation = &"Blocking"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_avjg3"]
animation = &"Death_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dwtqx"]
animation = &"Walking_Backwards"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xql6d"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dr0s2"]
animation = &"Running_Strafe_Right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jb40d"]
animation = &"Running_Strafe_Left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7yikj"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ntppg"]
blend_point_0/node = SubResource("AnimationNodeAnimation_dwtqx")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_xql6d")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_dr0s2")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_jb40d")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_7yikj")
blend_point_4/pos = Vector2(0, 0)
snap = Vector2(0.01, 0.1)
sync = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qts0s"]
animation = &"Jump_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jtdbv"]
animation = &"Jump_Land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4nq78"]
animation = &"Jump_Start"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lu4lw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ni18x"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y01bu"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rlg6g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hhv21"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x4bgh"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s4ie5"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nx555"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6yrc6"]
advance_mode = 2
advance_condition = &"grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kgrgm"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ywrck"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5thp2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1mdl6"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8yuvw"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vsq2k"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_vm5ia"]
states/1H_Melee_Attack_Slice_Diagonal/node = SubResource("AnimationNodeAnimation_q1j3l")
states/1H_Melee_Attack_Slice_Diagonal/position = Vector2(612.656, -64.6667)
states/1h_melee_chop/node = SubResource("AnimationNodeAnimation_wjsjs")
states/1h_melee_chop/position = Vector2(465.989, -44.6667)
states/Block/node = SubResource("AnimationNodeAnimation_xny4h")
states/Block/position = Vector2(723.854, 40.4117)
"states/Block 2/node" = SubResource("AnimationNodeAnimation_1funj")
"states/Block 2/position" = Vector2(842.521, 72.4117)
states/Blocking/node = SubResource("AnimationNodeAnimation_k5g38")
states/Blocking/position = Vector2(846.521, 0.411697)
states/Death_A/node = SubResource("AnimationNodeAnimation_avjg3")
states/Death_A/position = Vector2(903.854, 119.69)
states/End/position = Vector2(1034.67, 140)
states/IWR/node = SubResource("AnimationNodeBlendSpace2D_ntppg")
states/IWR/position = Vector2(585.989, 91.9753)
states/Jump_Idle/node = SubResource("AnimationNodeAnimation_qts0s")
states/Jump_Idle/position = Vector2(603.322, 224.667)
states/Jump_Land/node = SubResource("AnimationNodeAnimation_jtdbv")
states/Jump_Land/position = Vector2(780.655, 171.333)
states/Jump_Start/node = SubResource("AnimationNodeAnimation_4nq78")
states/Jump_Start/position = Vector2(456.655, 174)
states/Start/position = Vector2(218.667, 128.444)
transitions = ["Start", "IWR", SubResource("AnimationNodeStateMachineTransition_lu4lw"), "IWR", "1h_melee_chop", SubResource("AnimationNodeStateMachineTransition_ni18x"), "1h_melee_chop", "IWR", SubResource("AnimationNodeStateMachineTransition_y01bu"), "IWR", "1H_Melee_Attack_Slice_Diagonal", SubResource("AnimationNodeStateMachineTransition_rlg6g"), "1H_Melee_Attack_Slice_Diagonal", "IWR", SubResource("AnimationNodeStateMachineTransition_hhv21"), "IWR", "Jump_Start", SubResource("AnimationNodeStateMachineTransition_x4bgh"), "Jump_Start", "Jump_Idle", SubResource("AnimationNodeStateMachineTransition_s4ie5"), "IWR", "Jump_Idle", SubResource("AnimationNodeStateMachineTransition_nx555"), "Jump_Idle", "Jump_Land", SubResource("AnimationNodeStateMachineTransition_6yrc6"), "Jump_Land", "IWR", SubResource("AnimationNodeStateMachineTransition_kgrgm"), "IWR", "Block", SubResource("AnimationNodeStateMachineTransition_ywrck"), "Block", "Blocking", SubResource("AnimationNodeStateMachineTransition_5thp2"), "Blocking", "Block 2", SubResource("AnimationNodeStateMachineTransition_1mdl6"), "Block 2", "IWR", SubResource("AnimationNodeStateMachineTransition_8yuvw"), "IWR", "Death_A", SubResource("AnimationNodeStateMachineTransition_vsq2k")]
graph_offset = Vector2(114.521, 12.3569)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_talm7"]
radius = 0.7
height = 2.75

[node name="Enemy_knight" groups=["enemies"] instance=ExtResource("1_u1bpg")]
collision_layer = 3
collision_mask = 3
script = ExtResource("2_quhgy")

[node name="Skeleton3D" parent="Rig" index="0" groups=["enemies"]]
bones/0/position = Vector3(0, 0.000493814, 0)
bones/0/rotation = Quaternion(-2.04992e-11, 0.000595804, 3.55056e-11, 1)
bones/1/position = Vector3(-3.90378e-25, 0.390601, 1.63736e-18)
bones/1/rotation = Quaternion(0.00231605, 0.0421631, 1.8519e-05, 0.999108)
bones/2/rotation = Quaternion(0.0026116, 0.00178596, -9.21804e-05, 0.999995)
bones/3/rotation = Quaternion(0.000981624, -0.000143688, 0.000254793, 1)
bones/4/position = Vector3(0.211904, 0.133862, -0.0010949)
bones/4/rotation = Quaternion(-0.56094, -0.0669831, -0.650714, 0.507376)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(1.97877e-08, -4.58836e-08, -0.486804, 0.873511)
bones/6/rotation = Quaternion(-9.73784e-11, -2.98437e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.317917, -0.323254, 0.130989, 0.881634)
bones/8/position = Vector3(-1.68885e-09, 0.0961252, -0.0575)
bones/8/rotation = Quaternion(-0.000520284, 0.00198702, -0.700912, 0.713244)
bones/8/scale = Vector3(1, 1, 1)
bones/14/position = Vector3(-0.211524, 0.133672, -0.000992202)
bones/14/rotation = Quaternion(-0.62183, 0.084798, 0.620932, 0.469661)
bones/14/scale = Vector3(0.999999, 0.999999, 1)
bones/15/rotation = Quaternion(1.92847e-08, 5.46311e-08, 0.508433, 0.861102)
bones/16/rotation = Quaternion(-9.73784e-11, 2.98437e-10, -0.0266581, 0.999645)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(-0.319053, 0.29759, -0.209335, 0.875114)
bones/18/position = Vector3(-1.40993e-08, 0.0961251, -0.0575)
bones/18/rotation = Quaternion(3.34738e-05, 0.00047528, 0.702045, 0.712133)
bones/18/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(-0.00298465, -0.0328877, 0.00030536, 0.999455)
bones/24/position = Vector3(0.170945, 0.113587, 0.00215149)
bones/24/rotation = Quaternion(0.993321, 0.0825991, 0.0715429, 0.0370451)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.235407, 6.57811e-08, -1.61353e-07, 0.971897)
bones/26/rotation = Quaternion(-0.536054, -0.203639, 0.0482302, 0.817833)
bones/27/rotation = Quaternion(-1.02257e-08, 0.920355, -0.391084, 7.8113e-08)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(-0.170945, 0.113587, -0.00215145)
bones/28/rotation = Quaternion(0.996768, -0.0291815, 0.0306175, 0.0682915)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.307324, -6.32002e-08, 2.13559e-07, 0.951605)
bones/30/rotation = Quaternion(-0.565115, 0.111772, -0.00982433, 0.817346)
bones/31/rotation = Quaternion(2.89469e-08, 0.919115, -0.393991, -6.92977e-08)
bones/31/scale = Vector3(1, 1, 1)
bones/32/position = Vector3(0.170945, 0.29353, 0.577032)
bones/32/rotation = Quaternion(0.707107, -2.29314e-07, -4.60432e-08, 0.707107)
bones/33/position = Vector3(0.201467, 0.0316747, 0.21383)
bones/33/rotation = Quaternion(-0.710599, -6.99926e-08, -7.10097e-08, 0.703598)
bones/34/position = Vector3(1.94412e-08, 0.362833, -2.42861e-15)
bones/34/rotation = Quaternion(9.42133e-09, 1.73357e-09, 0.986364, -0.164581)
bones/35/position = Vector3(-2.53845e-08, 0.213436, -5.05319e-09)
bones/35/rotation = Quaternion(-1.01343e-07, 0.391084, 0.920355, -3.34029e-08)
bones/36/position = Vector3(8.26594e-09, 0.16565, -2.47098e-09)
bones/37/rotation = Quaternion(1, -2.29452e-09, 1.99661e-07, 2.11777e-12)
bones/39/position = Vector3(-0.170945, 0.29353, 0.577032)
bones/39/rotation = Quaternion(0.707107, -3.82505e-08, 1.45021e-07, 0.707107)
bones/40/position = Vector3(-0.170945, 0.027974, 0.230864)
bones/40/rotation = Quaternion(-0.692338, -7.20605e-08, -6.89861e-08, 0.721573)
bones/41/position = Vector3(1.94581e-08, 0.362833, 1.29576e-09)
bones/41/rotation = Quaternion(-5.69462e-09, 6.29978e-10, 0.995044, 0.0994361)
bones/42/position = Vector3(-1.07904e-08, 0.213436, 4.90794e-10)
bones/42/rotation = Quaternion(-1.0575e-07, 0.391084, 0.920355, -2.59467e-08)
bones/43/position = Vector3(-6.31128e-09, 0.16565, 3.10693e-09)
bones/43/rotation = Quaternion(-0.391084, -6.885e-08, -6.56287e-08, 0.920355)
bones/44/rotation = Quaternion(1, 3.68101e-09, 1.94879e-07, 7.28014e-09)
bones/46/position = Vector3(0.454229, 1.10196, -0.590325)
bones/46/rotation = Quaternion(-0.707107, -0.000140477, -0.000140477, 0.707107)
bones/47/position = Vector3(0.520521, 0.782699, -0.0524831)
bones/47/rotation = Quaternion(0.788409, 0.00939659, 0.61507, 0.00356622)
bones/48/position = Vector3(-0.453228, 1.10219, -0.591265)
bones/48/rotation = Quaternion(-0.707107, -0.000140477, -0.000140477, 0.707107)
bones/49/position = Vector3(-0.5109, 0.782699, 0.0615682)
bones/49/rotation = Quaternion(0.752538, -0.0106325, -0.658452, 0.00379351)

[node name="1H_Sword_Offhand" parent="Rig/Skeleton3D" index="0"]
transform = Transform3D(0.00272489, 0.245704, 0.96934, 0.999976, 0.00534807, -0.00416571, -0.00620719, 0.969329, -0.245683, 0.51034, 0.631083, 0.0058937)
visible = false

[node name="Badge_Shield" parent="Rig/Skeleton3D" index="1"]
transform = Transform3D(0.00272486, 0.245704, 0.96934, 0.999976, 0.00534553, -0.00416504, -0.00620457, 0.969329, -0.245683, 0.661446, 0.630434, -0.0324047)
visible = false

[node name="Rectangle_Shield" parent="Rig/Skeleton3D" index="2"]
transform = Transform3D(0.00272486, 0.245704, 0.96934, 0.999976, 0.00534553, -0.00416504, -0.00620457, 0.969329, -0.245683, 0.661446, 0.630434, -0.0324047)
visible = false

[node name="Round_Shield" parent="Rig/Skeleton3D" index="3"]
transform = Transform3D(0.00272486, 0.245704, 0.96934, 0.999976, 0.00534553, -0.00416504, -0.00620457, 0.969329, -0.245683, 0.661446, 0.630434, -0.0324047)

[node name="Spike_Shield" parent="Rig/Skeleton3D" index="4"]
transform = Transform3D(0.00272486, 0.245704, 0.96934, 0.999976, 0.00534553, -0.00416504, -0.00620457, 0.969329, -0.245683, 0.661446, 0.630434, -0.0324047)
visible = false

[node name="1H_Sword" parent="Rig/Skeleton3D" index="5"]
transform = Transform3D(-0.00804519, -0.139191, 0.990232, 0.999913, 0.00920735, 0.00941727, -0.0104278, 0.990222, 0.139105, -0.493974, 0.635436, 0.145808)

[node name="2H_Sword" parent="Rig/Skeleton3D" index="6"]
transform = Transform3D(-0.0080452, -0.139191, 0.990232, 0.999913, 0.00920733, 0.00941728, -0.0104278, 0.990222, 0.139105, -0.493974, 0.635436, 0.145808)
visible = false

[node name="Knight_Helmet" parent="Rig/Skeleton3D" index="7"]
transform = Transform3D(0.999735, -0.000473567, 0.0230337, 0.000609135, 0.999982, -0.00587901, -0.0230305, 0.00589148, 0.999717, 0.000471444, 1.20128, 0.0075956)

[node name="Knight_Cape" parent="Rig/Skeleton3D" index="8"]
transform = Transform3D(0.996058, 0.000469889, 0.0887066, 0.000580249, 0.99993, -0.0118122, -0.0887059, 0.0118171, 0.995988, 0.000446867, 1.20129, 0.00744428)

[node name="AnimationPlayer" parent="." index="1"]
autoplay = "Running_A"

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2" groups=["hurt_boxes"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.844501, 0)
shape = SubResource("CapsuleShape3D_pav6j")

[node name="AnimationTree" type="AnimationTree" parent="." index="3"]
tree_root = SubResource("AnimationNodeStateMachine_vm5ia")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/grounded = false
parameters/conditions/jumping = false
parameters/IWR/blend_position = Vector2(-0.00113767, -0.0217391)

[node name="hurt_box" type="Area3D" parent="." index="4" groups=["hurt_boxes"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hurt_box" index="0" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21178, 0)
shape = SubResource("CapsuleShape3D_talm7")

[node name="Health" parent="." index="5" instance=ExtResource("3_gvfh5")]
hp = 30
max_hp = 30

[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="died" from="Health" to="." method="_on_health_died"]
